fixed issue with thread title as single word being too long to break design

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,13 @@ body {
     font-family: 'IBM Plex Sans', sans-serif;
 }
 
+h1,h2,h3,h4,h5 {
+    width: 100%;
+    white-space: wrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 main {
     min-height: 90vh;
 }
@@ -99,59 +106,6 @@ main {
 .edit-thread label {
     display: none;
 }
-
-/* 
-
-
-
-.image-container {
-    position: relative;
-}
-
-.image-flash {
-    position: absolute;
-    bottom: 5%;
-    min-width: 30%;
-    width: 100%;
-    left: -2px;
-    background-color: #23BBBB;
-}
-
-
-
-.masthead {
-    margin-top: 10px;
-    overflow: hidden;
-    position: relative;
-    display: inline-block;
-    height: 33vh;
-    width: 100%;
-}
-
-.masthead-text {
-    background-color: #445261;
-    color: white;
-    position: relative;
-}
-
-.masthead-image {
-    position: relative;
-    overflow: hidden;
-}
-
-.masthead-image:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 90%;
-    height: 100%;
-    width: 150%;
-    background: #445261;
-    -webkit-transform: skew(15deg);
-    -moz-transform: skew(15deg);
-    transform: skew(15deg);
-    z-index: 100;
-} */
 
 .post-link {
     text-decoration: none;
